--- a/ucsschool-basis-pilot-ansible/debian/changelog
+++ b/ucsschool-basis-pilot-ansible/debian/changelog
@@ -1,6 +1,5 @@
-mypackage (1.0.0-0) UNRELEASED; urgency=low
+ucsschool-basis-pilot-ansible (0.1-1) unstable; urgency=low
 
-  * Initial release. Closes: #nnnn
-    <nnnn is the bug number of your ITP>
+  * Initial release
 
  -- Univention GmbH <packages@univention.de>  Fri, 05 May 2023 14:47:03 +0200
